# AMLSim

./: .gitignore  .python-version
python/: conf.json  pyproject.toml
python/paramFiles/: model.json
python/paramFiles/10K/: conf.json
python/paramFiles/1K/: conf.json
python/src/aml_simulator/: convert_logs.py  transaction_graph_generator.py
python/src/aml_simulator/amlsim/: nominator.py
python/src/aml_simulator/mesa/: amlsim_model.py  model_parameters.py  sim_properties.py
python/tests/: convert_logs_test.py  random_amount_test.py  rounded_amount_test.py  test_transaction_graph_generator.py
scripts/: transaction_graph_generator.py
